--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
     "vue-axios": "^3.4.0",
+    "vue-credit-card-validation": "^1.0.3",
+    "vue-i18n": "^8.27.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0"
   },
